--- a/embed/folder.html
+++ b/embed/folder.html
@@ -218,7 +218,7 @@
           </summary>
           <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
             <div class='ma2' style='min-width: 10rem;'>
-              The themes folder contains HTML templates and other global site assets.
+              Contains HTML templates and other global site assets.
               <br><br>
               For the basics, visit <a href=''>The Definitive Guide to Writing HTML Pages in Notebrew</a>.
             </div>
@@ -237,7 +237,7 @@
           </summary>
           <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
             <div class='ma2' style='min-width: 10rem;'>
-              The output folder contains your site's output files.
+              Contains your site's output files.
               <br><br>
               <div class='f6' style='font-style: italic;'>For the tech-savvy: Notebrew is a static site generator that converts your pages and posts into static files. This is where the files are kept.</div>
             </div>
