--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -4,10 +4,10 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 10 10%22><text y=%221em%22 font-size=%228%22>☕</text></svg>'>
 <style>{{ stylesCSS }}</style>
-<script type='module'>{{ folderJS }}</script>
+<script type='module'>{{ directoryJS }}</script>
 <title>
-  {{ if $.Path }}
-  {{ base $.Path }}{{ if $.SitePrefix }} | {{ $.SitePrefix }}{{ end }}
+  {{ if $.FilePath }}
+  {{ base $.FilePath }}{{ if $.SitePrefix }} | {{ $.SitePrefix }}{{ end }}
   {{ else }}
   files{{ if $.SitePrefix }} | {{ $.SitePrefix }}{{ end }}
   {{ end }}
