--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -158,50 +158,52 @@
 </ul>
 {{- end }}
 
-{{- if $.Sites }}
-<div class='mt2 pb2 bb'>
-  <div class='flex flex-wrap items-center'>
-    <div class='b'>Sites</div>
-    <div class='flex-grow-1'></div>
-    <div class='flex items-center'>
-      <details class='relative ml2' data-autoclose-details>
-        <summary role='button' title='Create' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
-          {{ template "octicons-plus" }}
+{{- if eq $.SitePrefix "" }}
+  <div class='mt2 pb2 bb'>
+    <div class='flex flex-wrap items-center'>
+      <div class='b'>sites</div>
+      <div class='flex-grow-1'></div>
+      <div class='flex items-center'>
+        <details class='relative ml2' data-autoclose-details>
+          <summary role='button' title='Create' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
+            {{ template "octicons-plus" }}
+            {{ template "octicons-triangle-down" }}
+          </summary>
+          <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+            <div class='ma2 tr'><a href='/files/createsite/' class='nowrap'>create site</a></div>
+          </div>
+        </details>
+      </div>
+    </div>
+  </div>
+  {{- if $.Sites }}
+  <ul>
+    {{- range $site := $.Sites }}
+    <li class='flex flex-wrap items-center bb pv2'>
+      <a href='{{ $site.Name }}/'>{{ $site.Name }}/</a>
+      {{- if or (not $.Username.Valid) (eq $.Username.String $site.Owner) }}
+      <div class='flex-grow-1'></div>
+      <details class='relative' data-autoclose-details>
+        <summary role='button' title='more actions' class='flex items-center button ba br2 b--black h2 hide-marker ph2 pointer' data-disable-click-selection>
+          {{ template "heroicons-ellipsis-horizontal" }}
           {{ template "octicons-triangle-down" }}
         </summary>
         <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-          <div class='ma2 tr'><a href='/files/createsite/' class='nowrap'>create site</a></div>
+          <div class='ma2'><a href='/files/deletesite/?name={{ trimPrefix $site.Name "@" }}' class='dark-red nowrap'>delete site</a></div>
         </div>
       </details>
-    </div>
-  </div>
-</div>
-<ul>
-  {{- range $site := $.Sites }}
-  <li class='flex flex-wrap items-center bb pv2'>
-    <a href='{{ $site.Name }}/'>{{ $site.Name }}/</a>
-    {{- if or (not $.Username.Valid) (eq $.Username.String $site.Owner) }}
-    <div class='flex-grow-1'></div>
-    <details class='relative' data-autoclose-details>
-      <summary role='button' title='more actions' class='flex items-center button ba br2 b--black h2 hide-marker ph2 pointer' data-disable-click-selection>
-        {{ template "heroicons-ellipsis-horizontal" }}
-        {{ template "octicons-triangle-down" }}
-      </summary>
-      <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-        <div class='ma2'><a href='/files/deletesite/?name={{ trimPrefix $site.Name "@" }}' class='dark-red nowrap'>delete site</a></div>
-      </div>
-    </details>
+      {{- end }}
+    </li>
     {{- end }}
-  </li>
+  </ul>
+  <div class='mv3 flex flex-wrap items-center'>
+    <div><button type='button' class='button ba br2 pv1 ph2'>&larr; previous</button></div>
+    <div class='flex-grow-1'></div>
+    <div><button type='button' class='button ba br2 pv1 ph2'>next &rarr;</button></div>
+  </div>
+  {{- else }}
+  <div class='mv2 tc'>- No other sites -</div>
   {{- end }}
-</ul>
-<div class='mv3 flex flex-wrap items-center'>
-  <div><button type='button' class='button ba br2 pv1 ph2'>&larr; previous</button></div>
-  <div class='flex-grow-1'></div>
-  <div><button type='button' class='button ba br2 pv1 ph2'>next &rarr;</button></div>
-</div>
-{{- else }}
-<div class='mv2 tc'>- No other sites -</div>
 {{- end }}
 
 {{- define "octicons-plus" }}
